# pb_otus_mlb2024

./: .gitignore  README.md  pyproject.toml
src/omlb/cli/groups/: __init__.py  homework.py  tree.py
src/omlb/homeworks/: hw1.py  hw2.py  hw3.py
tests/omlb/homeworks/: test_hw1.py  test_hw2.py  test_hw3.py
